@@ -60,7 +60,7 @@ class KnowledgeBookMetaMockTest
 	void testSetRecipes()
 	{
 		KnowledgeBookMetaMock meta = new KnowledgeBookMetaMock();
-		List<NamespacedKey> recipes = Arrays.asList(getRandomKey(), getRandomKey());
+		List<NamespacedKey> recipes = List.of(getRandomKey(), getRandomKey());
 
 		assertFalse(meta.hasRecipes());
 		meta.setRecipes(recipes);
@@ -71,7 +71,7 @@ class KnowledgeBookMetaMockTest
 	void testGetRecipes()
 	{
 		KnowledgeBookMetaMock meta = new KnowledgeBookMetaMock();
-		List<NamespacedKey> recipes = Arrays.asList(getRandomKey(), getRandomKey());
+		List<NamespacedKey> recipes = List.of(getRandomKey(), getRandomKey());
 		meta.setRecipes(recipes);
 
 		assertEquals(recipes, meta.getRecipes());
@@ -95,6 +95,8 @@ class KnowledgeBookMetaMockTest
 	{
 		KnowledgeBookMetaMock meta = new KnowledgeBookMetaMock();
 		assertEquals(meta, meta);
+		// TODO: Strange behaviour --> Accurate?
+		assertEquals(new ItemMetaMock(), meta);
 		assertNotEquals(meta, new ItemMetaMock());
 
 		KnowledgeBookMetaMock meta2 = new KnowledgeBookMetaMock();
